--- a/lazyload-demo/index.html
+++ b/lazyload-demo/index.html
@@ -2,60 +2,126 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <script type="text/javascript" src='js/jquery-1.11.3.min.js'></script>
+        <script type="text/javascript" src='js/jquery.lazyload-any.js'></script>
         <style type="text/css">
         body{
             background: #699f00;
+            text-align: center;
             font-family: '微软雅黑';
-            margin: 0;
+            color: #333;
         }
-        .content{
-            display: block;
-            position: absolute;
+        #container{
+            background: #fff;
             width: 80%;
-            height: 100%;
-            left: 50%;
-            margin-left: -40%;
-            box-shadow: 0px 0px 20px #000;
+            margin: 0 auto;
+            padding: 10px;
         }
-        .content iframe{
+        #container .lazyload{
+            width: 500px;
+            height: 300px;
+            background: #ccc;
+            margin: 0 auto;
+        }
+        #container .title{
+            border-top: 20px solid #333;
+        }
+        #container iframe{
+            border: 1px solid #333;
             width: 100%;
-            height: 100%;
-            border: 0;
-        }
-        .monitor{
-            background: rgba(10,10,10,0.3);
-            border: 20px solid #699f00;
-            border-radius: 25px 25px;
-            position: fixed;
-            height: 400px;
-            width: 79%;
-            box-shadow: 0px 0px 20px #000;
-            top: 100px;
-            left: 50%;
-            margin-left: -41%;
-        }
-        .monitor .hand{
-            position: absolute;
-            background: #699f00;
-            width: 4%;
-            height: 100px;
-            top: 145px;
-        }
-        .monitor .left-hand{
-            left: -4%;
-        }
-        .monitor .right-hand{
-            right: -4%;
+            display: inline-block;
+            height: 500px;
         }
         </style>
     </head>
     <body>
-        <div class="content">
-            <iframe src="demos/lazy_load_any.html"></iframe>
+        <div class="brand">
+            <img src="images/happybirthday.png">
         </div>
-        <div class="monitor">
-            <div class="left-hand hand"></div>
-            <div class="right-hand hand"></div>
+        <div id="container">
+            <h1 class='title'>图片延迟加载</h1>
+            <div class="words"></div>
+            <div class="lazyload">
+                <!-- <img src="images/1.png"> -->
+            </div>
+            <div class="words"></div>
+            <div class="lazyload">
+                <!-- <img src="images/2.png"> -->
+            </div>
+            <div class="words"></div>
+            <div class="lazyload">
+                <!-- <img src="images/3.png"> -->
+            </div>
+            <div class="words"></div>
+            <div class="lazyload">
+                <!-- <img src="images/4.png"> -->
+            </div>
+            <div class="words"></div>
+            <div class="lazyload">
+                <!-- <img src="images/5.png"> -->
+            </div>
+            <h1 class="title">视频延迟加载</h1>
+            <div class="words"></div>
+            <div class="lazyload">
+                
+            </div>
+            <h1 class="title">iframe延迟加载</h1>
+            <div class="words"></div>
+            <div class="lazyload">
+                <!-- <iframe src="http://www.iqiyi.com/"></iframe> -->
+            </div>
+            <div class="words"></div>
+            <div class="lazyload">
+                <!-- <iframe src="https://www.baidu.com"></iframe> -->
+            </div>
         </div>
     </body>
+    <script type="text/javascript">
+        var $container = $('#container');
+
+        (function(){
+            init();
+            setLazyload();
+        })();
+
+        function init(){
+            var str = '<p>刘德华（Andy Lau），1961年9月出生于香港，演员、歌手、词作人、制片人、电影人，影视歌多栖发展的代表艺人之一。</p>';
+            $container.find('.words').html(str+str+str+str+str+str+str+str+str+str);
+        }
+        function setLazyload(){
+            $(document).on('load', function(){
+                watch();
+            });
+
+            $(document).on('scroll', function(){
+                watch();
+            });
+
+            function watch(){
+                var viewportHeight = $(window).height();
+                var scrollTop = $(window).scrollTop();
+                var eToTop = 0;
+
+                $container.find('.lazyload').each(function(){
+                    eToTop = $(this).position().top;
+                    if (eToTop < viewportHeight + scrollTop) {
+                        load($(this));
+                    }
+                });
+            }
+
+            function load($ele){
+                var comment = $ele.contents().filter(function() {
+                  return this.nodeType === 8;
+                }).get(0);
+
+                var newElement = $(comment && $.trim(comment.data));
+                $ele.replaceWith(newElement);
+
+                newElement.fadeOut(0, function(){
+                    $(this).fadeIn(10000);
+                });
+            }
+        }
+    </script>
 </html>
