Update the sub-site of Pure CSS 3
Decorates the site and add a category of the CSS Button

--- a/sub-sites/css3-design/index.html
+++ b/sub-sites/css3-design/index.html
@@ -6,7 +6,24 @@
 	    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	</head>
 	<body>
-		<h1 class="main-title">Pure CSS<i>3</i></h1>
-		<div></div>
+		<header>
+			<h1 class="main-title"><a href="#">Pure CSS<i>3</i></a></h1>
+		</header>
+		<div class="wrap container">
+			<ul class="pure-css-category">
+				<li>
+					<h1 class="category-title">Button</h1>
+					<ul class="pure-css-button">
+						<li>
+							<a href="#" class="glass">Glass Style</a>
+						</li>
+						<li>
+							<a href="#" class="glass">Glass Style</a>
+						</li>
+					</ul>
+				</li>
+				<li></li>
+			</ul>
+		</div>
 	</body>
 </html>
