--- a/sub-sites/css-free-board/index.html
+++ b/sub-sites/css-free-board/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>CSS Free Board</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<link rel="stylesheet" type="text/css" href="css/widget.css">
 </head>
@@ -27,6 +28,11 @@
 				<div class="first mask-line"></div>
 				<div class="second mask-line"></div>
 			</div>
+		</div>
+		<div class="name">
+			<span class="text">爱</span>
+			<span class="text">奇</span>
+			<span class="text">艺</span>
 		</div>
 	</div>
 
