Add Smile-ball widget
Add animation in 爱奇艺 and add Smile-ball widget with animation

--- a/sub-sites/css-free-board/index.html
+++ b/sub-sites/css-free-board/index.html
@@ -30,10 +30,14 @@
 			</div>
 		</div>
 		<div class="name">
-			<span class="text">爱</span>
-			<span class="text">奇</span>
-			<span class="text">艺</span>
+			<span class="text text-1">爱</span>
+			<span class="text text-2">奇</span>
+			<span class="text text-3">艺</span>
 		</div>
+	</div>
+	<div class="smile-face">
+		<div class="head"></div>
+		<div class="shadow"></div>
 	</div>
 
 </body>
