添加w3data.js插件，完善css free board开发模式

--- a/sub-sites/css-free-board/index.html
+++ b/sub-sites/css-free-board/index.html
@@ -1,44 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CSS Free Board</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="stylesheet" type="text/css" href="css/widget.css">
+    <title>CSS Free Board</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/widget.css">
 </head>
 <body>
-	<div class="iqiyi-logo">
-		<div class="outline">
-			<div class="letter-left-i">
-				<div class="first mask-line"></div>
-				<div class="second mask-line"></div>
-				<div class="third mask-line"></div>
-			</div>
-			<div class="letter-q">
-				<div class="circle"></div>
-				<div class="tail"></div>
-			</div>
-			<div class="letter-middle-i"></div>
-			<div class="letter-y">
-				<div class="left-line line"></div>
-				<div class="right-line line"></div>
-				<div class="middle-line line"></div>
-			</div>
-			<div class="letter-right-i">
-				<div class="first mask-line"></div>
-				<div class="second mask-line"></div>
-			</div>
-		</div>
-		<div class="name">
-			<span class="text text-1">爱</span>
-			<span class="text text-2">奇</span>
-			<span class="text text-3">艺</span>
-		</div>
-	</div>
-	<div class="smile-face">
-		<div class="head"></div>
-		<div class="shadow"></div>
-	</div>
+    <div>
+        <ul id="id01">
+            <li w3-repeat="shit">
+                <div w3-include-HTML="{{url}}"></div>
+            </li>
+        </ul>
+    </div>
 
+
+    <script src="/cdn/w3data/w3data.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
