--- a/sub-sites/css-free-board/index.html
+++ b/sub-sites/css-free-board/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <ul id="id01">
-            <li w3-repeat="shit">
+            <li w3-repeat="stuffs" class="stuff-box">
                 <div w3-include-HTML="{{url}}"></div>
             </li>
         </ul>
