--- a/sub-sites/css-free-board/index.html
+++ b/sub-sites/css-free-board/index.html
@@ -4,19 +4,13 @@
     <title>CSS Free Board</title>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="stylesheet" type="text/css" href="css/widget.css">
 </head>
 <body>
     <div>
-        <ul id="id01">
-            <li w3-repeat="stuffs" class="stuff-box">
-                <div w3-include-HTML="{{url}}"></div>
-            </li>
+        <ul id="container">
         </ul>
+        <style type="text/css" id="cssContainer"></style>
     </div>
-
-
-    <script src="/cdn/w3data/w3data.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
