--- a/sub-sites/css-free-board/stuffs/html/iqiyi-logo.html
+++ b/sub-sites/css-free-board/stuffs/html/iqiyi-logo.html
@@ -1,4 +1,4 @@
-<div class="iqiyi-logo">
+<div id="iqiyi-logo">
     <div class="outline">
         <div class="letter-left-i">
             <div class="first mask-line"></div>
