--- a/sub-sites/index.html
+++ b/sub-sites/index.html
@@ -12,14 +12,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
     <style>
-    #view-source {
-      position: fixed;
-      display: block;
-      right: 0;
-      bottom: 0;
-      margin-right: 40px;
-      margin-bottom: 40px;
-      z-index: 900;
+    .list {
+
+    }
+    .list .list-item {
+      display: inline-block;
+      margin: 0 5px;
     }
     </style>
   </head>
@@ -52,9 +50,8 @@
       <div class="mdl-layout__content">
 
         <div class="mdl-typography--text-center">
-          <ul class="mdl-list">
-            <li class="mdl-list__item">
-              <span class="mdl-list__item-primary-content">
+          <ul class="list">
+            <li class="list-item">
                 <div class="mdl-card mdl-shadow--2dp">
                   <div class="mdl-card__title mdl-card--expand">
                     <h2 class="mdl-card__title-text">CSS Free Board</h2>
@@ -68,10 +65,8 @@
                     </a>
                   </div>
                 </div>
-              </span>
             </li>
-            <li class="mdl-list__item">
-              <span class="mdl-list__item-primary-content">
+            <li class="list-item">
                 <div class="mdl-card mdl-shadow--2dp">
                   <div class="mdl-card__title mdl-card--expand">
                     <h2 class="mdl-card__title-text">Lazyload demo</h2>
@@ -85,10 +80,8 @@
                     </a>
                   </div>
                 </div>
-              </span>
             </li>
-            <li class="mdl-list__item">
-              <span class="mdl-list__item-primary-content">
+            <li class="list-item">
                 <div class="mdl-card mdl-shadow--2dp">
                   <div class="mdl-card__title mdl-card--expand">
                     <h2 class="mdl-card__title-text">Canvas Show</h2>
@@ -102,7 +95,6 @@
                     </a>
                   </div>
                 </div>
-              </span>
             </li>
           </ul>
         </div>
