--- a/sub-sites/index.html
+++ b/sub-sites/index.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
     <style>
     .list {
-
+      padding: 0 40px;
     }
     .list .list-item {
       display: inline-block;
-      margin: 0 5px;
+      margin: 5px;
     }
     </style>
   </head>
