adjust some styles

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 	<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
 	<link href="https://www.google-analytics.com" rel="preconnect" crossorigin>
 	<link rel="stylesheet" data-aload="https://fonts.googleapis.com/css?family=Open+Sans">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css-src/style.css">
 </head>
 <body>
-	<header>
+	<header class="header">
 		<div class="header-info">
 			<h1 class="header-name">Glory Wong</h1>
 			<h1 class="header-intro">
@@ -32,6 +32,6 @@
 		</div>
 	</header>
 	<article></article>
-	<footer>你值得拥有 2017</footer>
+	<footer class="footer">你值得拥有 2017</footer>
 </body>
 </html>
