add instagram link

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<ul class="header-social">
 				<li><a href="https://www.facebook.com/glorywongzhaohui" target="_blank">Facebook</a></li>
 				<li><a href="https://twitter.com/glorywong1001" target="_blank">Twitter</a></li>
+				<li><a href="https://www.instagram.com/glorywong1001/" target="_blank">Instagram</a></li>
 				<li><a href="https://github.com/glorywong" target="_blank">Github</a></li>
 				<li><a href="mailto:glorywong1001@gmail.com">Contact me</a></li>
 			</ul>
