add bg-image and adjust styles

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 				<li><a href="mailto:glorywong1001@gmail.com">Contact me</a></li>
 			</ul>
 		</div>
+		<img src="assets/andy_lau.png" alt="Andy Lau" width="790" class="header-avatar">
 	</header>
 	<article></article>
 	<footer class="footer">你值得拥有 2017</footer>
