adjust some style for mobile

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="header-info">
 			<h1 class="header-name">Glory Wong</h1>
 			<h1 class="header-intro">
-			I'm a passionate and creative front-end developer. I keep close eye on front-end development and web standards.
+				I'm a passionate and creative front-end developer. I love coding, drawing, design and singing.
 			</h1>
 			<ul class="header-social">
 				<li><a href="https://www.facebook.com/glorywongzhaohui" target="_blank">Facebook</a></li>
