adjust style and add audio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="header-info">
 			<h1 class="header-name">Glory Wong</h1>
 			<h1 class="header-intro">
-				I'm a passionate and creative front-end developer. I love coding, drawing, design and singing.
+				Painter? Designer? Singer? Linguist? I'm none of them. Who am I? I'm a passionate and creative front-end developer.
 			</h1>
 			<ul class="header-social">
 				<li><a href="https://www.facebook.com/glorywongzhaohui" target="_blank">Facebook</a></li>
@@ -31,9 +31,9 @@
 				<li><a href="mailto:glorywong1001@gmail.com">Contact me</a></li>
 			</ul>
 		</div>
-		<img src="assets/andy_lau.png" alt="Andy Lau" width="790" class="header-avatar">
 	</header>
 	<article></article>
-	<footer class="footer">你值得拥有 2017</footer>
+	<footer class="footer">You deserve it 2017</footer>
+	<audio src="assets/bywwgdhbh.mp3" autoplay></audio>
 </body>
 </html>
