--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<ul class="header-social">
 				<li><a href="https://www.facebook.com/glorywongzhaohui" target="_blank">Facebook</a></li>
 				<li><a href="https://twitter.com/glorywong1001" target="_blank">Twitter</a></li>
+				<li><a href="https://music.163.com/#/user/home?id=261618415" target="_blank">Netease Music</a></li>
 				<li><a href="https://www.instagram.com/glorywong1001/" target="_blank">Instagram</a></li>
 				<li><a href="https://www.tumblr.com/blog/glorywong1001" target="_blank">Tumblr</a></li>
 				<li><a href="https://github.com/glorywong" target="_blank">Github</a></li>
