--- a/sites/urgood/content/css-pics/index.html
+++ b/sites/urgood/content/css-pics/index.html
@@ -1,15 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>CSS Pics</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+	<title>我们都有一个家名字叫中国</title>
+	<link rel="stylesheet" type="text/css" href="./css-pics.css">
 </head>
 <body>
-  <!-- Your work list here @nlj -->
-  牛莉娟的作品放置这里
+<div class="snowflake1">
+    <div class="part1">
+	    <div class="angle"></div>
+    </div>
+    <div class="part2">
+    	<div class="angle"></div>
+    </div>
+    <div class="part3">
+	    <div class="angle"></div>
+    </div>
+    <div class="part4">
+	    <div class="angle"></div>
+    </div>
+    <div class="part5">
+	    <div class="angle"></div>
+    </div>
+    <div class="part6">
+	    <div class="angle"></div>
+    </div>
+</div>
+
+<div class="snowflake2">
+	<div class="inner"></div>
+	<div class="part1">
+	    <div class="angle"></div>
+    </div>
+    <div class="part2">
+    	<div class="angle"></div>
+    </div>
+    <div class="part3">
+	    <div class="angle"></div>
+    </div>
+    <div class="part4">
+	    <div class="angle"></div>
+    </div>
+    <div class="part5">
+	    <div class="angle"></div>
+    </div>
+    <div class="part6">
+	    <div class="angle"></div>
+    </div>
+</div>
+<div class="hat">
+	<div class="ball"></div>
+	<div class="edge"></div>
+	<div class="hat-body"></div>
+	<div class="hat-side"></div>
+</div>
+<div class="sugar">
+	<div class="right"></div>
+</div>
+<div class="XmarsMan"></div>
+<div class="XmarsTree"></div>
+<div class="newYear1">
+	<div class="head1"></div>
+	<div class="head2"></div>
+	<div class="body part1"></div>
+	<div class="body part2"></div>
+	<div class="body part3"></div>
+	<div class="body part4"></div>
+	<div class="body part5"></div>
+	<div class="body part6"></div>
+	<div class="body part7"></div>
+	<div class="bottom1"></div>
+	<div class="bottom2"></div>
+	<div class="bottom3"></div>
+	<div class="bottom4"></div>
+	<div class="bottom5"></div>
+	<div class="bottom6"></div>
+</div>
 </body>
 </html>
