add link to urgood site

--- a/index.html
+++ b/index.html
@@ -34,8 +34,19 @@
 			</ul>
 		</div>
 	</header>
-	<article></article>
-	<footer class="footer">You deserve it 2017</footer>
+	<article class="article">
+		<ul class="sites">
+			<li class="item">
+				<a href="sites/urgood" target="_blank">
+					<div class="card">
+						<div class="content"></div>
+						<div class="foot">UR Good</div>
+					</div>
+				</a>
+			</li>
+		</ul>
+	</article>
+	<footer class="footer">You deserve it 2018</footer>
 	<audio src="assets/bywwgdhbh.mp3" autoplay></audio>
 </body>
 </html>
