--- a/sites/urgood/index.html
+++ b/sites/urgood/index.html
@@ -15,7 +15,7 @@
   </header>
   <article class="catalog-container">
     <ul class="catalog">
-      <li class="item"><a href="javascript:void(0)" class="a">CSS Pics</a></li>
+      <li class="item"><a href="content/css-pics" class="a">CSS Pics</a></li>
       <li class="item"><a href="javascript:void(0)" class="b">Animations</a></li>
       <li class="item"><a href="javascript:void(0)" class="c">Games</a></li>
     </ul>
