--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 	<header class="header">
+		<canvas class="header-bg"></canvas>
 		<div class="header-info">
 			<h1 class="header-name">Glory Wong</h1>
 			<h1 class="header-intro">
@@ -47,6 +48,7 @@
 		</ul>
 	</article>
 	<footer class="footer">You deserve it 2018</footer>
+	<script src='js-src/index.js'></script>
 	<audio src="assets/bywwgdhbh.mp3" autoplay></audio>
 </body>
 </html>
