replace with new site (build by svelte)

--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Glory Wong</title>
-	<link rel="shortcut icon" href="https://assets-cdn.github.com/favicon.ico">
+	<meta charset='utf-8'>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="cleartype" content="on">
 	<meta name="MobileOptimized" content="320">
@@ -11,44 +9,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta name="google-site-verification" content="qPlZxRIR0Jh3xv4EpVMKTdMkHUc6QkA90FJ36-aeNRI">
 	<meta name="msvalidate.01" content="E69BB1A31D65F1F707C29A72889383D9">
-	<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-	<link href="https://www.google-analytics.com" rel="preconnect" crossorigin>
+	<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin="">
+	<link href="https://www.google-analytics.com" rel="preconnect" crossorigin="">
 	<link rel="stylesheet" data-aload="https://fonts.googleapis.com/css?family=Open+Sans">
-	<link rel="stylesheet" type="text/css" href="css-src/style.css">
+
+	<title>Zhaozhao today</title>
+
+	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='stylesheet' href='/reset.css'>
+	<link rel='stylesheet' href='/global.css'>
+	<link rel='stylesheet' href='/build/bundle.css'>
+
+	<script defer src='/build/bundle.js'></script>
 </head>
+
 <body>
-	<header class="header">
-		<canvas class="header-bg"></canvas>
-		<div class="header-info">
-			<h1 class="header-name">Glory Wong</h1>
-			<h1 class="header-intro">
-				Painter? Designer? Singer? Linguist? I'm none of them. Who am I? I'm a passionate and creative front-end developer.
-			</h1>
-			<ul class="header-social">
-				<li><a href="https://www.facebook.com/glorywongzhaohui" target="_blank">Facebook</a></li>
-				<li><a href="https://twitter.com/glorywong1001" target="_blank">Twitter</a></li>
-				<li><a href="https://music.163.com/#/user/home?id=261618415" target="_blank">Netease Music</a></li>
-				<li><a href="https://www.instagram.com/glorywong1001/" target="_blank">Instagram</a></li>
-				<li><a href="https://www.tumblr.com/blog/glorywong1001" target="_blank">Tumblr</a></li>
-				<li><a href="https://github.com/glorywong" target="_blank">Github</a></li>
-				<li><a href="mailto:glorywong1001@gmail.com">Contact me</a></li>
-			</ul>
-		</div>
-	</header>
-	<article class="article">
-		<ul class="sites">
-			<li class="item">
-				<a href="sites/urgood" target="_blank">
-					<div class="card">
-						<div class="content"></div>
-						<div class="foot">UR Good</div>
-					</div>
-				</a>
-			</li>
-		</ul>
-	</article>
-	<footer class="footer">You deserve it 2018</footer>
-	<script src='js-src/index.js'></script>
-	<audio src="assets/bywwgdhbh.mp3" autoplay></audio>
 </body>
 </html>
