--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<title>Zhaozhao today</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/reset.css'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='/public/reset.css'>
+	<link rel='stylesheet' href='/public/global.css'>
+	<link rel='stylesheet' href='/public/build/bundle.css'>
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='/public/build/bundle.js'></script>
 </head>
 
 <body>
